tests update 29.08